# denstoolkit

./: .gitignore  CLONE.md  README  README.md
.github/workflows/: clone.yml
notes/: WFNFormatSpecs.txt
notes/diatomicquadrules/: diatomicquadrules.tex
notes/gammprojection/: gammaprojection.tex
src/: CHANGES  CONTRIBUTORS  DESIGNTODOS  INFODEVELOP  Makefile  MakefileDist  README  TODO  bump_version.sh  checkdependencies  makefile  makefile.hpc  preprelease
src/candmiser/: TODO
src/common/: atom.cpp  atom.h  atomcolschcust.h  atomcolschjmol.cpp  atomcolschjmol.h  atomradiicust.cpp  atomradiicust.h  basegausslegendre.cpp  basegausslegendre.h  basegausslegendredata.cpp  basegausslegendredata.h  basesphertdesdata.cpp  basesphertdesdata.h  basesphtdesign.cpp  basesphtdesign.h  bondnetwork.cpp  bondnetwork.h  circledots3d.cpp  circledots3d.h  citations.h  colorutils.cpp  colorutils.h  commonhelpers.cpp  commonhelpers.h  configLclSysDefs.sh  critptnetwork.cpp  critptnetwork.h  cudawavefunctionclass.cu  cudawavefunctionclass.cuh  custfld-wfnclass.cpp  custfld-wfnclass.cxx  demat1critptnetwork.cpp  demat1critptnetwork.h  demat1critptnetworkbp.cpp  demat1critptnetworkbp.h  demat1critptnetworksl.cpp  demat1critptnetworksl.h  dtkscalarfunction3d.cpp  dtkscalarfunction3d.h  dtkscalarfunction6d.cpp  (+118 more)
src/devdoc/: Doxyfile  Doxyfile.bkp
src/dtkbpdens/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkbpdens.cc  dtkbpdens.cpp  helpersplot.cpp  helpersplot.h  localdefs.h  makefile  optflags.cpp  optflags.h  soldefines.h
src/dtkcharcicp/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  custfmtmathfuncts.cpp  custfmtmathfuncts.h  dtkcharcicp.cc  dtkcharcicp.cpp  localdefs.h  optflags.cpp  optflags.h
src/dtkcube/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkcube.cc  dtkcube.cpp  localdefs.h  makefile  optflags.cpp  optflags.h  soldefines.h
src/dtkdemat1/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkdemat1.cc  dtkdemat1.cpp  helperplots.cpp  helperplots.h  localdefs.h  optflags.cpp  optflags.h  soldefines.h  tips4gnuplot.txt
src/dtkdrawer/: 13DMXa.xyz  13DMXb.xyz  13DMXc.xyz  13DMXd.xyz  37DMXa.xyz  37DMXb.xyz  37DMXc.xyz  37DMXd.xyz  crtflnms.cpp  crtflnms.h  dtkdrawer.cc  helpersdrawer.cpp  helpersdrawer.h  localdefs.h  makefile  optflags.cpp  optflags.h  renderTestFigs.sh
src/dtkfindcicp/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkfindcicp.cpp  optflags.cpp  optflags.h
src/dtkfindcp/: ChangeLog  Makefile  README  crtflnms.cpp  crtflnms.h  custfmtmathfuncts.cpp  custfmtmathfuncts.h  dtkfindcp.cc  dtkfindcp.cpp  localdefs.h  makefile  optflags.cpp  optflags.h  soldefines.h
src/dtkintegobondpath/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkintegobondpath.cc  dtkintegobondpath.cpp  localdefs.h  optflags.cpp  optflags.h  soldefines.h
src/dtkintegrate/: crtflnms.cpp  crtflnms.h  dtkintegrate.cc  helpers.cpp  helpers.h  helpersintegrate.cpp  helpersintegrate.h  localdefs.h  makefile  makefile.hpc  optflags.cpp  optflags.h
src/dtkline/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkline.cc  dtkline.cpp  localdefs.h  optflags.cpp  optflags.h  soldefines.h
src/dtkmapfieldonisosurf/: crtflnms.cpp  crtflnms.h  dtkmapfieldonisosurf.cc  helpersmapfieldonisosurf.cpp  helpersmapfieldonisosurf.h  localdefs.h  optflags.cpp  optflags.h
src/dtkmiser/: crtflnms.cpp  crtflnms.h  dtkmiser.cc  helpersintegrate.cpp  helpersintegrate.h  localdefs.h  optflags.cpp  optflags.h
src/dtkmomd/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkmomd.cc  dtkmomd.cpp  helpersplot.cpp  helpersplot.h  localdefs.h  optflags.cpp  optflags.h  soldefines.h
src/dtknci/: crtflnms.cpp  crtflnms.h  dtknci.cc  helpersnci.cpp  helpersnci.h  localdefs.h  makefile  optflags.cpp  optflags.h
src/dtkplane/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkplane.cc  dtkplane.cpp  helpersplot.cpp  helpersplot.h  localdefs.h  makefile  optflags.cpp  optflags.h  soldefines.h
src/dtkpoint/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkpoint.cc  dtkpoint.cpp  localdefs.h  optflags.cpp  optflags.h  soldefines.h
src/dtkproject6dto2d/: ChangeLog  crtflnms.cpp  crtflnms.h  dtkproject6dto2d.cc  helperplots.cpp  helperplots.h  localdefs.h  optflags.cpp  optflags.h
src/dtkpropcpsoniso/: crtflnms.cpp  crtflnms.h  dtkpropcpsoniso.cc  helperspropcpsoniso.cpp  helperspropcpsoniso.h  localdefs.h  makefile  makefile.hpc  optflags.cpp  optflags.h
src/dtkqdmol/: ChangeLog  Makefile  crtflnms.cpp  crtflnms.h  dtkqdmol.cc  dtkqdmol.cpp  localdefs.h  optflags.cpp  optflags.h  soldefines.h
src/dtkview/: CMakeLists.txt  DensToolKit.pro  DensToolKitViewer.icns  Install.md  README  README.md  TODO  denstoolkitviewer.qrc  dtkglbondnetwork.cpp  dtkglbondnetwork.h  dtkglcriticalpointnetwork.cpp  dtkglcriticalpointnetwork.h  dtkglutils.cpp  dtkglutils.h  dtkglwidget.cpp  dtkglwidget.h  dtkmainwindow.cpp  dtkmainwindow.h  dtkmainwindow.ui  localdefs.h  main.cpp
src/scripts/: dtkGetSumBCPRho  dtkchgcurrversion  dtkchgsuiteversion  dtkeps2pdf  dtkgetnciplot  dtkpov2png
src/test/: XeF2.wfx  localdefs.h  makefile  runParallelProfv2.0.sh  test_derivsdm1.cc  test_dtkscalarfunction.cc  test_dtkscalarfunction6d.cc  test_gausswavefunction.cc  test_hessdm1.cc  test_molecule.cc  test_momgamma.cc  test_rho2cs.cc  test_rho2os.cc
src/timeprofilev2.0/: 42.wfx  README  optflags.cpp  optflags.h  optionflagsbase.cpp  optionflagsbase.h  timeprofile.cc
tex/dtkmanual/: availablefields.tex  custfld-wfnclass.cpp  custfld-wfnclass.cxx  defsandunits.tex  densfieldsandqtaim.tex  dtk-manual.tex  dtkbibliography.bib  fdl-1.3.tex  hmdtkbpdens.tex  hmdtkcharcicp.tex  hmdtkcube.tex  hmdtkdemat1.tex  hmdtkdrawer.tex  hmdtkeps2pdf.tex  hmdtkfindcp.tex  hmdtkgetnciplot.tex  hmdtkintegrate.tex  hmdtkline.tex  hmdtkmapfieldonisosurf.tex  hmdtkmomd.tex  hmdtknci.tex  hmdtkplane.tex  hmdtkpoint.tex  hmdtkpov2png.tex  hmdtkproject6dto2d.tex  (+6 more)
wavefiles/: benzene.wfn  ch4.wfx
wffiles/: 4-Methylbenzoic_acid.wfn  benzyldiethylamine.wfx  cubano_sto3g.wfx  cyclopropane.wfx  ethanol.wfn  h2oh2o.wfx  maprotiline.wfx  mescaline.wfx
(+5 files in other folders)
